# lofty_Ryzen_NPU

./: .gitignore  README.md  accuracy_output.txt
aie_kernels/aie2/: bf16_exp.cc
apps/: cos_float.cc
apps/app3/: Makefile  aie2.py
apps/app4/: aie2.py  test.py
apps/app8/: aie2.py  test.py
apps/app8-v2/: aie2.py  aie2_backup.py  test.py
apps/app8-v2/kernels/: cos_float.cc  vector_add.cc  vector_mult.cc
apps/app8/kernels/: cos_float.cc
apps/app9-v1/: Makefile  aie2.py  lut_gen.py  test.py
apps/app9-v1/kernels/: cos_float.cc  lut_ops.cpp  lut_ops.h
apps/app9_exp/: Makefile  aie2.py  test.cpp  test.py
apps/app9_exp/_build/: testExp
apps/bad_loafty0_bfloat16/: aie2.py  aie2_gg.py  test.py  test_gg.py
apps/bad_loafty0_bfloat16/kernels/: cos_float.cc  mean.cc
apps/bad_loafty0_bfloat16/utils/: npyFC.py
apps/broadcast_example/: Makefile  aie2.py  test.py  trace_4b.json
apps/broadcast_example/kernels/: mean.cc
apps/broadcast_repeat_test/: aie2.py  test.py
apps/device_app/: CMakeLists.txt  Makefile  aie2.py  test.cpp
apps/device_app/kernels/: add.cc
apps/device_app/utils/: accuracy_utils.hpp  parse_trace.py  power_utils.hpp  test_utils.py  vector_utils.hpp
apps/device_app/utils/cpp_plotting/: plot_utils.h
apps/device_app/utils/hdf5/: hdf5_utils.cpp  hdf5_utils.h
apps/device_app/utils/npy/: npy_to_csv.py
apps/loafty0_bfloat16/: Makefile  aie2.py  test.py
apps/loafty0_bfloat16/graphs/: loafty0.drawio
apps/loafty0_bfloat16/kernels/: lut_ops.h  main_kernel.cc  mean.cc  scale.cc  trig_float.cc
apps/loafty0_bfloat16/misc/: Untitled.ipynb
apps/loafty0_bfloat16/utils/: parse_trace.py  test_utils.py
apps/loafty0_float/: aie2.py
apps/loafty0_float/kernels/: lut_ops.h  mean.cc  passthrough.cc  trig_float.cc  vector_add.cc
apps/loafty0_float_old/kernels/: vector_mult.cc  (+1 more)
apps/loafty1_bfloat16/: CMakeLists.txt  Makefile  aie2.py  parse_trace.py  test.cpp  test.py
apps/loafty1_bfloat16_nooooo/: aie2.py  test.py
apps/loafty2_bfloat16/: CMakeLists.txt  Makefile  aie2_verb.py  test.py
apps/loafty_bfloat16/: CMakeLists.txt  Makefile
apps/loafty_prototype0/: Makefile  aie2.py  test.py
apps/loafty_prototype0_float/: aie2.py  test.py
apps/lut_gen/: lut_gen.py
apps/mem_limit_example/: Makefile  aie2.py  test.py
apps/old_loafty0_bfloat16/: Makefile  test.py
apps/old_loafty0_float/: test.py
apps/trace_example/: Makefile  test.cpp  test.py
lofty_tina/: hello_world.ipynb  model0.ipynb  model_graph  model_graph.dot  print.py  requirements.txt  tina_run.py  tina_run_acc.py  tina_setup.py  tina_version.ipynb  tina_version_og.ipynb
lofty_tina/unzipped_files/: vis.npy
lut_gen/: lut_gen.py
lut_gen/luts/: full1024uint32_t_exp.txt  full512bfloat16_cos.txt  full512bfloat16_sin.txt  full512float_cos.txt
results_plotting/accuarcy/: accuracy_plot.py
results_plotting/performance/: performance_plot.py  roofline_plot.py
roofline_plotting/: roofline.py
tina_testing/: main.py
(+141 files in other folders)
